-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.3, Qt Creator 4.1.0-beta1
-
None
-
MSVC2015, x86, Qt 5.7 branch.
How to reproduce:
- Open Qt Creator
- Open the last session
- Have Qt Creator crash with following backtrace:
> ProjectExplorerd4.dll!ProjectExplorer::Runnable::is<ProjectExplorer::StandardRunnable>() Line 196 C++
ProjectExplorerd4.dll!ProjectExplorer::Internal::LocalApplicationRunControlFactory::canRun(ProjectExplorer::RunConfiguration * runConfiguration, Core::Id mode) Line 144 C++
ProjectExplorerd4.dll!ProjectExplorer::findRunControlFactory::__l2::<lambda>(ProjectExplorer::IRunControlFactory * factory) Line 1916 C++
ProjectExplorerd4.dll!ExtensionSystem::PluginManager::getObject<ProjectExplorer::IRunControlFactory,bool <lambda>(ProjectExplorer::IRunControlFactory *) >(ProjectExplorer::findRunControlFactory::__l2::bool <lambda>(ProjectExplorer::IRunControlFactory *) predicate) Line 102 C++
ProjectExplorerd4.dll!ProjectExplorer::findRunControlFactory(ProjectExplorer::RunConfiguration * config, Core::Id mode) Line 1913 C++
ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPlugin::canRunStartupProject(Core::Id runMode, QString * whyNot) Line 2772 C++
ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::slotUpdateRunActions() Line 2790 C++
ProjectExplorerd4.dll!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::)(void)>::call(void(ProjectExplorer::ProjectExplorerPluginPrivate::)() f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 141 C++
ProjectExplorerd4.dll!QtPrivate::FunctionPointer<void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::)(void)>::call<QtPrivate::List<>,void>(void(ProjectExplorer::ProjectExplorerPluginPrivate::)() f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 160 C++
ProjectExplorerd4.dll!QtPrivate::QSlotObject<void (_thiscall ProjectExplorer::ProjectExplorerPluginPrivate::*)(void),QtPrivate::List<>,void>::impl(int which, QtPrivate::QSlotObjectBase * this, QObject * r, void * * a, bool * ret) Line 120 C++
Qt5Cored.dll!QtPrivate::QSlotObjectBase::call(QObject * r, void * * a) Line 101 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3728 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3602 C++
ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPlugin::updateRunActions() Line 434 C++
ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::activeRunConfigurationChanged() Line 2672 C++
ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::activeTargetChanged() Line 2650 C++
ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::startupProjectChanged() Line 2626 C++
ProjectExplorerd4.dll!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::)(void)>::call(void(ProjectExplorer::ProjectExplorerPluginPrivate::)() f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 141 C++
ProjectExplorerd4.dll!QtPrivate::FunctionPointer<void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::)(void)>::call<QtPrivate::List<>,void>(void(ProjectExplorer::ProjectExplorerPluginPrivate::)() f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 160 C++
ProjectExplorerd4.dll!QtPrivate::QSlotObject<void (_thiscall ProjectExplorer::ProjectExplorerPluginPrivate::*)(void),QtPrivate::List<>,void>::impl(int which, QtPrivate::QSlotObjectBase * this, QObject * r, void * * a, bool * ret) Line 120 C++
Qt5Cored.dll!QtPrivate::QSlotObjectBase::call(QObject * r, void * * a) Line 101 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3728 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3602 C++
ProjectExplorerd4.dll!ProjectExplorer::SessionManager::startupProjectChanged(ProjectExplorer::Project * _t1) Line 265 C++
ProjectExplorerd4.dll!ProjectExplorer::SessionManager::setStartupProject(ProjectExplorer::Project * startupProject) Line 366 C++
ProjectExplorerd4.dll!ProjectExplorer::SessionManagerPrivate::restoreStartupProject(const Utils::PersistentSettingsReader & reader) Line 881 C++
ProjectExplorerd4.dll!ProjectExplorer::SessionManager::loadSession(const QString & session) Line 1024 C++
ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPluginPrivate::loadSession(const QString & session) Line 1901 C++
ProjectExplorerd4.dll!QtPrivate::FunctorCall<QtPrivate::IndexesList<0>,QtPrivate::List<QString const &>,void,void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::)(QString const &)>::call(void(ProjectExplorer::ProjectExplorerPluginPrivate::)(const QString &) f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 141 C++
ProjectExplorerd4.dll!QtPrivate::FunctionPointer<void (__thiscall ProjectExplorer::ProjectExplorerPluginPrivate::)(QString const &)>::call<QtPrivate::List<QString const &>,void>(void(ProjectExplorer::ProjectExplorerPluginPrivate::)(const QString &) f, ProjectExplorer::ProjectExplorerPluginPrivate * o, void * * arg) Line 160 C++
ProjectExplorerd4.dll!QtPrivate::QSlotObject<void (_thiscall ProjectExplorer::ProjectExplorerPluginPrivate::*)(QString const &),QtPrivate::List<QString const &>,void>::impl(int which, QtPrivate::QSlotObjectBase * this, QObject * r, void * * a, bool * ret) Line 120 C++
Qt5Cored.dll!QtPrivate::QSlotObjectBase::call(QObject * r, void * * a) Line 101 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3728 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3602 C++
ProjectExplorerd4.dll!ProjectExplorer::Internal::ProjectWelcomePage::requestSession(const QString & _t1) Line 378 C++
ProjectExplorerd4.dll!ProjectExplorer::Internal::ProjectWelcomePage::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 298 C++
ProjectExplorerd4.dll!ProjectExplorer::Internal::ProjectWelcomePage::qt_metacall(QMetaObject::Call _c, int _id, void * * _a) Line 357 C++
Qt5Cored.dll!QMetaObject::metacall(QObject * object, QMetaObject::Call cl, int idx, void * * argv) Line 302 C++
Qt5Qmld.dll!QQmlObjectOrGadget::metacall(QMetaObject::Call type, int index, void * * argv) Line 1541 C++
Qt5Qmld.dll!CallMethod(const QQmlObjectOrGadget & object, int index, int returnType, int argCount, int * argTypes, QV4::ExecutionEngine * engine, QV4::CallData * callArgs) Line 1129 C++
Qt5Qmld.dll!CallPrecise(const QQmlObjectOrGadget & object, const QQmlPropertyData & data, QV4::ExecutionEngine * engine, QV4::CallData * callArgs) Line 1378 C++
Qt5Qmld.dll!QV4::QObjectMethod::callInternal(QV4::CallData * callData) Line 1861 C++
Qt5Qmld.dll!QV4::QObjectMethod::call(const QV4::Managed * m, QV4::CallData * callData) Line 1801 C++
Qt5Qmld.dll!QV4::Object::call(QV4::CallData * d) Line 330 C++
Qt5Qmld.dll!QV4::Runtime::callProperty(QV4::ExecutionEngine * engine, int nameIndex, QV4::CallData * callData) Line 1030 C++
0e0100d1() Unknown
[Frames below may be incorrect and/or missing]
Qt5Qmld.dll!QV4::SimpleScriptFunction::call(const QV4::Managed * that, QV4::CallData * callData) Line 582 C++
Qt5Qmld.dll!QV4::Object::call(QV4::CallData * d) Line 330 C++
Qt5Qmld.dll!QQmlJavaScriptExpression::evaluate(QV4::CallData * callData, bool * isUndefined) Line 196 C++
Qt5Qmld.dll!QQmlBoundSignalExpression::evaluate(void * * a) Line 246 C++
Qt5Qmld.dll!QQmlBoundSignal_callback(QQmlNotifierEndpoint * e, void * * a) Line 377 C++
Qt5Qmld.dll!QQmlNotifier::emitNotify(QQmlNotifierEndpoint * endpoint, void * * a) Line 100 C++
Qt5Qmld.dll!QQmlData::signalEmitted(QAbstractDeclarativeData * __formal, QObject * object, int index, void * * a) Line 780 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3617 C++
Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3602 C++
Qt5Quickd.dll!QQuickMouseArea::clicked(QQuickMouseEvent * _t1) Line 644 C++
Qt5Quickd.dll!QQuickMouseArea::setPressed(Qt::MouseButton button, bool p, Qt::MouseEventSource source) Line 1210 C++
Qt5Quickd.dll!QQuickMouseArea::mouseReleaseEvent(QMouseEvent * event) Line 786 C++
Qt5Quickd.dll!QQuickItem::event(QEvent * ev) Line 7632 C++
Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3799 C++
Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3159 C++
Qt5Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 988 C++
Qt5Cored.dll!QCoreApplication::sendEvent(QObject * receiver, QEvent * event) Line 231 C++
Qt5Quickd.dll!QQuickWindow::sendEvent(QQuickItem * item, QEvent * e) Line 2735 C++
Qt5Quickd.dll!QQuickWindowPrivate::deliverMouseEvent(QMouseEvent * event) Line 1640 C++
Qt5Quickd.dll!QQuickWindow::mouseReleaseEvent(QMouseEvent * event) Line 1684 C++
Qt5Guid.dll!QWindow::event(QEvent * ev) Line 2044 C++
Qt5Quickd.dll!QQuickWindow::event(QEvent * e) Line 1538 C++
Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3799 C++
Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3159 C++
Qt5Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 988 C++
Qt5Cored.dll!QCoreApplication::sendEvent(QObject * receiver, QEvent * event) Line 231 C++
Qt5QuickWidgetsd.dll!QQuickWidget::mouseReleaseEvent(QMouseEvent * e) Line 1167 C++
Qt5Widgetsd.dll!QWidget::event(QEvent * event) Line 8779 C++
Qt5QuickWidgetsd.dll!QQuickWidget::event(QEvent * e) Line 1259 C++
Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3799 C++
Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3273 C++
Qt5Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 988 C++
Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event) Line 234 C++
Qt5Widgetsd.dll!QApplicationPrivate::sendMouseEvent(QWidget * receiver, QMouseEvent * event, QWidget * alienWidget, QWidget * nativeWidget, QWidget * * buttonDown, QPointer<QWidget> & lastMouseReceiver, bool spontaneous) Line 2769 C++
Qt5Widgetsd.dll!QWidgetWindow::handleMouseEvent(QMouseEvent * event) Line 612 C++
Qt5Widgetsd.dll!QWidgetWindow::event(QEvent * event) Line 240 C++
Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3799 C++
Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3159 C++
Qt5Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 988 C++
Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event) Line 234 C++
Qt5Guid.dll!QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent * e) Line 1909 C++
Qt5Guid.dll!QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent * e) Line 1693 C++
Qt5Guid.dll!QWindowSystemInterface::sendWindowSystemEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 654 C++
qwindowsd.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 82 C++
Qt5Cored.dll!qt_internal_proc(HWND__ * hwnd, unsigned int message, unsigned int wp, long lp) Line 445 C++
user32.dll!76b3cd43() Unknown
For Gerrit Dashboard: QTCREATORBUG-16507 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
163675,2 | Fix crashes with (Runnable|Connection)::is<T>() | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |