Fix crashes with (Runnable|Connection)::is<T>()

Another regression of 3f11ef92167
Default constructed Runnables/Connections have zero d pointer.

Task-number: QTCREATORBUG-16507
Change-Id: I230b661eba4c408a353a711f93f3163160980793
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>
Reviewed-by: hjk <hjk@theqtcompany.com>